# InterCom-test-code

./: README.md  sdkconfig
components/CoffeeMaker_UI/: CMakeLists.txt
components/MQTT/: MQTT_Config.c  MQTT_Core.c  MQTT_Interface.c
components/MQTT/include/: MQTT_Interface.h
components/Matter/: DoneCoffeeMaker.cpp  DoneCoffeeMaker.h  MatterInterface.cpp  MatterInterface.h
components/SpotifyInterface/: CMakeLists.txt  README.md
components/SpotifyInterface/include/: SpotifyInterface.h  SpotifyTypedef.h
components/UserInterface/: CMakeLists.txt  Print_needed_Cmake.sh
components/UserInterface/GUI/GUI_handler/include/: GUI.h  GUI_Typedef.h  lvglTimer.h
components/UserInterface/GUI/GUI_handler/srcs/: GUI.c
components/UserInterface/GUI/coffeeMaker/: coffeeMaker_GUI.c  coffeeMaker_GUI.h
components/Utilities/: CMakeLists.txt
components/Utilities/SharedBus/: SharedBus.c  SharedBus.cpp  SharedBus.h
main/: ServiceManger.cpp  ServiceManger.h  app_main.cpp
main/ServiceManager/: ServiceManager.cpp  ServiceManager.h
